Add svg images for layout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <title>Grid Project </title>
 </head>
 <body>
-    <p>Test for style</p>
-    
+    <div class="container">
+        <div class="left-column">
+            <h1>Dashboard</h1>
+            <ul>
+            <li>Home</li>
+            <li>Profile</li>
+            <li>Messages</li>
+            <li>History</li>
+            <li>Tasks</li>
+            <li>Communities
+            </li>
+        </ul>
+
+        <ul>
+            <li>Settings</li>
+            <li>Support</li>
+            <li>Privacy</li>
+        </ul>
+        </div>
+
+
+
+
+    </div>    
 </body>
 </html>
