Start laying out top-left grid

--- a/index.html
+++ b/index.html
@@ -9,22 +9,35 @@
 <body>
     <div class="container">
         <div class="left-column">
-            <h1>Dashboard</h1>
-            <ul>
-            <li>Home</li>
-            <li>Profile</li>
-            <li>Messages</li>
-            <li>History</li>
-            <li>Tasks</li>
-            <li>Communities
-            </li>
-        </ul>
+            <div class="item">
+                <h1>Dashboard</h1>
+                <ul class = "list">
+                <li> <img src ="images/heart-box.svg"> Home</li>
+                <li> <img src = "images/face-man-profile.svg">Profile</li>
+                <li>Messages</li>
+                <li>History</li>
+                <li>Tasks</li>
+                <li>Communities
+                </li>
+            </ul>
+            </div>
+            
+        <div class="item">
+            <ul class = "list">
+                <li>Settings</li>
+                <li>Support</li>
+                <li>Privacy</li>
+            </ul>
+        </div>
+        
+        </div>
 
-        <ul>
-            <li>Settings</li>
-            <li>Support</li>
-            <li>Privacy</li>
-        </ul>
+        <div class="topright">
+            cdkdkl
+        </div>
+
+        <div class="bottomright">
+            hdhe
         </div>
 
 
