Center list items on left column

--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
         <div class="left-column">
             <div class="item">
                 <h1>Dashboard</h1>
-                <ul class = "list">
+                <ul class = "list" id = "one">
                 <li> <img src ="images/heart-box.svg"> Home</li>
                 <li> <img src = "images/face-man-profile.svg">Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities
+                <li> <img src ="images/calendar-check.svg">Messages</li>
+                <li> <img src = "images/history.svg" >History</li>
+                <li> <img src = "images/calendar-check.svg" >Tasks</li>
+                <li> <img src = "images/heart-box.svg" >Communities
                 </li>
             </ul>
             </div>
             
         <div class="item">
             <ul class = "list">
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <li><img src = "images/cog.svg">Settings</li>
+                <li><img src ="images/lifebuoy.svg">Support</li>
+                <li><img src = "images/eye-circle-outline.svg">Privacy</li>
             </ul>
         </div>
         
