Add search quadrant

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="left-column">
             <div class="item">
-                <h1>Dashboard</h1>
+                <h1 class = title><img  id = "title" src ="images/view-dashboard-outline.svg"> Dashboard</h1>
                 <ul class = "list" id = "one">
                 <li> <img src ="images/heart-box.svg"> Home</li>
                 <li> <img src = "images/face-man-profile.svg">Profile</li>
@@ -33,7 +33,13 @@
         </div>
 
         <div class="topright">
-            cdkdkl
+            <div class="item1"><img src="images/magnify.svg">  
+            <label for="text-area">
+                <input type="text">
+            </label></div>
+            <div class="item2">sjkdsl</div>
+            <div class="item3">fdsjkfds</div>
+            <div class="item4">dsnjk</div>
         </div>
 
         <div class="bottomright">
