Finalize layout of top section using combination of flex and grid

--- a/index.html
+++ b/index.html
@@ -37,9 +37,27 @@
             <label for="text-area">
                 <input type="text">
             </label></div>
-            <div class="item2">sjkdsl</div>
-            <div class="item3">fdsjkfds</div>
-            <div class="item4">dsnjk</div>
+            <div class="item2">
+                <ul class =item22>
+                    <li> <img src ="images/bell-alert-outline.svg" class = "bird"> </li>
+                    <li><img src ="images/bird.svg" class = "bird"> </li>
+                    <li>Gary Leader</li>
+                </ul>
+            </div>
+            <div class="item3">
+                <div class="item3-1">
+                    <img  id = "profile" src ="images/view-dashboard-outline.svg">
+
+                </div>
+                <div class="item3-2">
+                    <div class = "sub">Hi there.</div>
+                    <div> Misterfeeshy (@Mr.Fish)</div>
+                    
+                </div>
+            </div>
+            <div class="item4">
+                <button>New</button><button>Upload</button><button>Share</button>
+            </div>
         </div>
 
         <div class="bottomright">
