Set up basic structure for the card section

--- a/index.html
+++ b/index.html
@@ -61,10 +61,95 @@
         </div>
 
         <div class="bottomright">
-         <h3>Your Projects</h3>     
-         <h3>hello</h3>    
-         <div class="cards">Cards go here grid</div>
-         <div class="">Make this into a grid?</div>rightside
+            <h3>Your Projects</h3>     
+            <h3>hello</h3>    
+            <div class="cardgrid">
+                <div class="card">
+                    <div class="toprow">
+                        <h4>Super Cool Proejct</h4>
+                        <p>Im going to type a bunch of nonsense gibberish that goes here to make it seem like
+                            there is actually content that is worth putting here
+                        </p>
+                    </div>
+                    <div class="bottomrow">
+                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/account-group.svg"></div>
+                    </div>
+                </div>
+
+
+                <div class="card">
+                    <div class="toprow">
+                        <h4>Super Cool Proejct</h4>
+                        <p>Im going to type a bunch of nonsense gibberish that goes here to make it seem like
+                            there is actually content that is worth putting here
+                        </p>
+                    </div>
+                    <div class="bottomrow">
+                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/account-group.svg"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="toprow">
+                        <h4>Super Cool Proejct</h4>
+                        <p>Im going to type a bunch of nonsense gibberish that goes here to make it seem like
+                            there is actually content that is worth putting here
+                        </p>
+                    </div>
+                    <div class="bottomrow">
+                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/account-group.svg"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="toprow">
+                        <h4>Super Cool Proejct</h4>
+                        <p>Im going to type a bunch of nonsense gibberish that goes here to make it seem like
+                            there is actually content that is worth putting here
+                        </p>
+                    </div>
+                    <div class="bottomrow">
+                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/account-group.svg"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="toprow">
+                        <h4>Super Cool Proejct</h4>
+                        <p>Im going to type a bunch of nonsense gibberish that goes here to make it seem like
+                            there is actually content that is worth putting here
+                        </p>
+                    </div>
+                    <div class="bottomrow">
+                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/account-group.svg"></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="toprow">
+                        <h4>Super Cool Proejct</h4>
+                        <p>Im going to type a bunch of nonsense gibberish that goes here to make it seem like
+                            there is actually content that is worth putting here
+                        </p>
+                    </div>
+                    <div class="bottomrow">
+                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/account-group.svg"></div>
+                    </div>
+                </div>
+            </div>  
+
+            <div class="announcements">
+                 <div class="subannounce1">first box</div>
+                <div class="subannounce2">Second box</div>
+            </div>
 
         </div>
 
