Finish right side of page.  Swap out dummy images.  Tweak layout and adjust titles

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             <div class="item2">
                 <ul class =item22>
                     <li> <img src ="images/bell-alert-outline.svg" class = "bird"> </li>
-                    <li><img src ="images/bird.svg" class = "bird"> </li>
+                    <li><img src ="images/fish.svg" class = "bird"> </li>
                     <li>Gary Leader</li>
                 </ul>
             </div>
             <div class="item3">
                 <div class="item3-1">
-                    <img  id = "profile" src ="images/view-dashboard-outline.svg">
+                    <img  id = "profile" src ="images/fish.svg">
 
                 </div>
                 <div class="item3-2">
@@ -62,7 +62,7 @@
 
         <div class="bottomright">
             <h3>Your Projects</h3>     
-            <h3>hello</h3>    
+            <h3 id = "head">Accouncements</h3>    
             <div class="cardgrid">
                 <div class="card">
                     <div class="toprow">
@@ -72,9 +72,9 @@
                         </p>
                     </div>
                     <div class="bottomrow">
-                        <div> <img src ="images/account-group.svg"></div>
-                        <div> <img src ="images/account-group.svg"></div>
-                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/plus.svg"></div>
+                        <div> <img src ="images/bird.svg"></div>
+                        <div> <img src ="images/heart-box.svg "></div>
                     </div>
                 </div>
 
@@ -87,9 +87,9 @@
                         </p>
                     </div>
                     <div class="bottomrow">
-                        <div> <img src ="images/account-group.svg"></div>
-                        <div> <img src ="images/account-group.svg"></div>
-                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/plus.svg"></div>
+                        <div> <img src ="images/bird.svg"></div>
+                        <div> <img src ="images/heart-box.svg "></div>
                     </div>
                 </div>
                 <div class="card">
@@ -100,9 +100,9 @@
                         </p>
                     </div>
                     <div class="bottomrow">
-                        <div> <img src ="images/account-group.svg"></div>
-                        <div> <img src ="images/account-group.svg"></div>
-                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/plus.svg"></div>
+                        <div> <img src ="images/bird.svg"></div>
+                        <div> <img src ="images/heart-box.svg "></div>
                     </div>
                 </div>
                 <div class="card">
@@ -113,9 +113,9 @@
                         </p>
                     </div>
                     <div class="bottomrow">
-                        <div> <img src ="images/account-group.svg"></div>
-                        <div> <img src ="images/account-group.svg"></div>
-                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/plus.svg"></div>
+                        <div> <img src ="images/bird.svg"></div>
+                        <div> <img src ="images/heart-box.svg "></div>
                     </div>
                 </div>
                 <div class="card">
@@ -126,9 +126,9 @@
                         </p>
                     </div>
                     <div class="bottomrow">
-                        <div> <img src ="images/account-group.svg"></div>
-                        <div> <img src ="images/account-group.svg"></div>
-                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/plus.svg"></div>
+                        <div> <img src ="images/bird.svg"></div>
+                        <div> <img src ="images/heart-box.svg "></div>
                     </div>
                 </div>
                 <div class="card">
@@ -139,16 +139,62 @@
                         </p>
                     </div>
                     <div class="bottomrow">
-                        <div> <img src ="images/account-group.svg"></div>
-                        <div> <img src ="images/account-group.svg"></div>
-                        <div> <img src ="images/account-group.svg"></div>
+                        <div> <img src ="images/plus.svg"></div>
+                        <div> <img src ="images/bird.svg"></div>
+                        <div> <img src ="images/heart-box.svg "></div>
                     </div>
                 </div>
             </div>  
 
             <div class="announcements">
-                 <div class="subannounce1">first box</div>
-                <div class="subannounce2">Second box</div>
+                 <div class="subannounce1">
+                    <div class="box" id = "boxy">
+                        <h4>Title</h4>
+                        <p>Insert some random gibberish here to make it seem like there is text</p>
+                    </div>
+                    <div class="box" id = "boxy">
+                        <h4>Title</h4>
+                        <p>Insert some random gibberish here to make it seem like there is text</p>
+                    </div>
+                    <div class="box">
+                        <h4>Title</h4>
+                        <p>Insert some random gibberish here to make it seem like there is text</p>
+                    </div>
+                 </div>
+
+
+                <div class="subannounce2">  
+                    <div class="trending">Trending</div> 
+                    <div class="box1">
+                        <img src ="images/fish.svg">
+                    </div> 
+                    <div class="box2">
+                        <h4>@ Mr.Feesh</h6>
+                        <p>Hello there friends</p>
+                    </div>
+                    <div class="box3">
+                        <img src ="images/paw.svg">
+                    </div>
+                    <div class="box4">
+                        <h4>@ Maple</h6>
+                        <p>"I finally caught my tail!"</p>
+                    </div>
+                    <div class="box5">
+                        <img src ="images/orange_cat.png">
+                    </div> 
+                    <div class="box6">
+                        <h4>@ Oaky</h6>
+                        <p>When are we getting rid of @Maple?</p>
+                    </div>
+                    <div class="box7">
+                        <img src ="images/taz.svg">
+                    </div>
+                    <div class="box8">
+                        <h4>@ Taz</h6>
+                        <p>I am dying of hunger feed me plz #deadkitty</p>
+                    </div>
+                 
+                 </div>
             </div>
 
         </div>
