Swap out name for Mister Feeshy

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <ul class =item22>
                     <li> <img src ="images/bell-alert-outline.svg" class = "bird"> </li>
                     <li><img src ="images/fish.svg" class = "bird"> </li>
-                    <li>Gary Leader</li>
+                    <li>Mister Feeshy</li>
                 </ul>
             </div>
             <div class="item3">
